# sports-cli

./: Dockerfile  app.py  dockercompose.yaml  pyproject.toml
sportscli/cli/: __init__.py
